# p_url

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py  utils.py
backend/src/p_url/: utils.py
backend/tests/: test_lambda_handler.py  test_p_url_utils.py
common/: variables.mk
frontend/: bun.lockb  package.json  pyproject.toml
frontend/app/: main.py
frontend/src/routes/: +layout.svelte
frontend/tests/: test_app.py
src/: p_url_utils.py
terraform/: cloudwatch.tf  cors.tf  data.tf  domain.tf  eventbridge.tf  gateway.tf  iam.tf  lambda.tf  main.tf  networking.tf  outputs.tf  provider.tf  variables.tf
tests/: test_p_url_utils.py
