[project]
name = "p-url-backend"
version = "0.1.0"
description = "backend for url shortener for code challenge, to be deployed on AWS Lambda"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["validators"]

[tool.uv]
dev-dependencies = [
    "boto3", # note this is included in lambda functions
    "pytest",
    "pytest-testdox",
    "pytest-cov",
    "coverage",
    "bandit",
    "pip-audit",
    "black",
    "flake8",
    "flake8-pyproject",
    "mock",
    "moto",
]

[tool.pytest.ini_options]
addopts = "--testdox"
testpaths = ["tests"]
pythonpath = "./"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist"
]
[tool.black]
line-length = 100

[tool.bandit]
exclude_dirs = ["./tests", "./.venv", "./build"]
skips = ["B101"]
